[package]
name = "tee_dot_os"
version = "0.1.0"
authors = ["Emmanuel David Tuksa emmydave414@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"